--- a/app/src/main/res/drawable/buttonbg.xml
+++ b/app/src/main/res/drawable/buttonbg.xml
@@ -3,12 +3,12 @@
     android:shape="rectangle">
 
 
-    <solid android:color="#FF673A"/>
+    <solid android:color="#FD6F44"/>
 
     <corners
-        android:topLeftRadius="0dp"
-        android:bottomLeftRadius="0dp"
-        android:radius="23dp"/>
+        android:topLeftRadius="5dp"
+        android:bottomLeftRadius="5dp"
+        android:radius="28dp"/>
 
 
 
