--- a/app/src/main/res/layout/fragment_fake_medicine.xml
+++ b/app/src/main/res/layout/fragment_fake_medicine.xml
@@ -1,22 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".FragmentsCollections.FakeMedicineFragment">
-
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:background="#0B3867">
+            android:background="#1BABE4">
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -27,7 +25,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:fontFamily="@font/arapey"
+                    android:fontFamily="@font/autour_one"
                     android:text="SafeMed"
                     android:textColor="@color/white"
                     android:textSize="25dp"
@@ -36,9 +34,22 @@
             </RelativeLayout>
 
         </androidx.appcompat.widget.Toolbar>
-
-
     </LinearLayout>
+
+
+
+
+
+    <ImageView
+        android:id="@+id/represenatation"
+        android:layout_width="match_parent"
+        android:layout_height="270dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp" />
+
+
 
 
     <Spinner
@@ -47,11 +58,10 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/dropdownListPreferredItemHeight"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="15dp"
-        android:layout_marginRight="15dp"
+        android:layout_marginLeft="7dp"
+        android:layout_marginRight="7dp"
         android:stateListAnimator="@drawable/spinner_sla"
         android:textAlignment="center" />
-
 
     <Button
         android:id="@+id/uploadImagesButton"
