--- a/app/src/main/res/layout/fragment_medicine_detection_one.xml
+++ b/app/src/main/res/layout/fragment_medicine_detection_one.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".FragmentsCollections.MedicineDetectionOneFragment">
 
     <LinearLayout
@@ -20,7 +20,7 @@
             <androidx.appcompat.widget.Toolbar
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:background="#0B3867">
+                android:background="#1BABE4">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -31,7 +31,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:fontFamily="@font/arapey"
+                        android:fontFamily="@font/autour_one"
                         android:text="SafeMed"
                         android:textColor="@color/white"
                         android:textSize="25dp"
@@ -43,19 +43,6 @@
 
 
         </LinearLayout>
-
-        <com.google.android.material.tabs.TabLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#0B3867"
-            app:tabIndicatorColor="@color/white"
-            app:tabTextColor="@color/white"></com.google.android.material.tabs.TabLayout>
-
-        <androidx.viewpager.widget.ViewPager
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="5dp"
-            tools:layout_editor_absoluteX="8dp" />
 
 
     </LinearLayout>
