--- a/app/src/main/res/layout/tweetsrow.xml
+++ b/app/src/main/res/layout/tweetsrow.xml
@@ -29,6 +29,7 @@
                     android:layout_margin="2dp"
                     android:fontFamily="sans-serif-condensed"
                     android:text="Title"
+                    android:textColor="@color/black"
                     android:textSize="13dp" />
 
                 <TextView
@@ -38,6 +39,7 @@
                     android:layout_margin="2dp"
                     android:fontFamily="sans-serif-condensed"
                     android:text="UsernameTwiiter"
+                    android:textColor="@color/black"
                     android:textSize="13dp" />
 
 
@@ -48,6 +50,7 @@
                     android:layout_margin="2dp"
                     android:fontFamily="sans-serif-condensed"
                     android:text="Content"
+                    android:textColor="@color/black"
                     android:textSize="13dp" />
 
                 <TextView
@@ -57,6 +60,7 @@
                     android:layout_margin="2dp"
                     android:fontFamily="sans-serif-condensed"
                     android:text="Description "
+                    android:textColor="@color/black"
                     android:textSize="13dp" />
 
 
@@ -80,6 +84,7 @@
                     android:layout_margin="2dp"
                     android:fontFamily="sans-serif-condensed"
                     android:text="UPI Id"
+                    android:textColor="@color/black"
                     android:textSize="13dp" />
 
             </LinearLayout>
